--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "build": "node build.js"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3"
-    ,"@fontsource/cinzel": "^5.0.5"
+    "bootstrap": "^5.3.3",
+    "@fontsource/cinzel": "^5.0.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "lite-server": "^2.6.1"
