--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "bootstrap": "^5.3.3",
     "@fontsource/cinzel": "^5.0.5",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
     "lite-server": "^2.6.1"
