--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "@fontsource/cinzel": "^5.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "flag-icons": "^7.5.0",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "@babel/standalone": "^7.28.1"
   },
   "devDependencies": {
     "lite-server": "^2.6.1"
