--- a/package.json
+++ b/package.json
@@ -7,16 +7,19 @@
     "build": "node build.js"
   },
   "dependencies": {
-    "bootstrap": "^5.3.3",
+    "@babel/standalone": "^7.28.1",
     "@fontsource/cinzel": "^5.0.5",
+    "@fortawesome/fontawesome-free": "^6.7.2",
+    "bootstrap": "^5.3.3",
+    "flag-icons": "^7.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
-    "flag-icons": "^7.5.0",
-    "@fortawesome/fontawesome-free": "^6.7.2",
-    "@babel/standalone": "^7.28.1"
+    "react-router-dom": "^6.23.0"
   },
   "devDependencies": {
+    "@babel/cli": "^7.28.0",
+    "@babel/core": "^7.28.0",
+    "@babel/preset-react": "^7.27.1",
     "lite-server": "^2.6.1"
   }
 }
