--- a/.github/workflows/deploy_rec.yml
+++ b/.github/workflows/deploy_rec.yml
@@ -31,7 +31,7 @@ jobs:
           echo "🧹 Nettoyage du dossier de test..."
           rm -rf /opt/clairobscur/pictos-rec/*
 
-          echo "📁 Copie des fichiers dans pictos-dev..."
+          echo "📁 Copie des fichiers dans pictos-rec..."
           cp -r dist/* /opt/clairobscur/pictos-rec/
 
-          echo "✅ Déploiement DEV terminé !"
+          echo "✅ Déploiement REC terminé !"
