--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "bootstrap": "^5.3.3",
     "flag-icons": "^7.5.0",
     "keycloak-js": "^26.0.0",
+    "@mui/material": "^5.15.14",
+    "@mui/system": "^5.15.14",
+    "@mui/x-data-grid": "^6.20.4",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0"
