--- a/package.json
+++ b/package.json
@@ -8,16 +8,17 @@
   },
   "dependencies": {
     "@babel/standalone": "^7.28.1",
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.3",
     "@fontsource/cinzel": "^5.0.5",
     "@fortawesome/fontawesome-free": "^6.7.2",
-    "bootstrap": "^5.3.3",
-    "flag-icons": "^7.5.0",
-    "keycloak-js": "^26.0.0",
     "@mui/material": "^5.15.14",
     "@mui/system": "^5.15.14",
     "@mui/x-data-grid": "^6.20.4",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.3",
+    "bootstrap": "^5.3.3",
+    "esbuild": "^0.25.8",
+    "flag-icons": "^7.5.0",
+    "keycloak-js": "^26.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.0"
