--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "keycloak-js": "^26.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0"
+    "react-router-dom": "^6.23.0",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@babel/cli": "^7.28.0",
